--- a/index.html
+++ b/index.html
@@ -9,72 +9,79 @@
 
 <body>
     <!--React나 Next로 만들면 쉽기야 하겠는데 그러면 동적웹페이지 호스팅을 못해서 그냥 깡 html로 만듦..-->
-    <h1>테일즈런너 레벨업 계산기</h1>
-    <h3 style="color: #909090;">만든놈: 사큐</h3>
-    <div id="cul">현재 레벨</div>
-    <select name="색상" id="selA">
-        <option value="a_red">빨간색</option>
-        <option value="a_orange">주황색</option>
-        <option value="a_yellow">노란색</option>
-        <option value="a_green">초록색</option>
-        <option value="a_blue">파란색</option>
-        <option value="a_darkblue">남색</option>
-        <option value="a_purple">보라색</option>
-    </select>
-    <select name="레벨" id="selALvl">
-        <option value="a1">병아리</option>
-        <option value="a2">발바닥</option>
-        <option value="a3">양말</option>
-        <option value="a4">슬리퍼</option>
-        <option value="a5">운동화</option>
-        <option value="a6">윙부츠</option>
-        <option value="a7">데빌윙부츠</option>
-        <option value="a8">엔젤윙부츠</option>
-        <option value="a9">파워윙부츠</option>
-        <option value="a10">썬더윙부츠</option>
-        <option value="a11">루나윙부츠</option>
-        <option value="a12">쏠라윙부츠</option>
-        <option value="a13">스텔라윙부츠</option>
-        <option value="a14">갤럭시윙부츠</option>
-        <option value="a15">홀리윙부츠</option>
-        <option value="a16">프라우드윙부츠</option>
-        <option value="a17">크로노스윙부츠</option>
-        <option value="a18">인페르노윙부츠</option>
-    </select>
-    <input type="number" placeholder="퍼센트" id="lvlPer" min="0" max="100" step="0.01" value="0">%
-    <div id="tal">목표 레벨</div>
-    <select name="색상" id="selB">
-        <option value="b_red">빨간색</option>
-        <option value="b_orange">주황색</option>
-        <option value="b_yellow">노란색</option>
-        <option value="b_green">초록색</option>
-        <option value="b_blue">파란색</option>
-        <option value="b_darkblue">남색</option>
-        <option value="b_purple">보라색</option>
-    </select>
-    <select name="레벨" id="selBLvl">
-        <option value="b1">병아리</option>
-        <option value="b2">발바닥</option>
-        <option value="b3">양말</option>
-        <option value="b4">슬리퍼</option>
-        <option value="b5">운동화</option>
-        <option value="b6">윙부츠</option>
-        <option value="b7">데빌윙부츠</option>
-        <option value="b8">엔젤윙부츠</option>
-        <option value="b9">파워윙부츠</option>
-        <option value="b10">썬더윙부츠</option>
-        <option value="b11">루나윙부츠</option>
-        <option value="b12">쏠라윙부츠</option>
-        <option value="b13">스텔라윙부츠</option>
-        <option value="b14">갤럭시윙부츠</option>
-        <option value="b15">홀리윙부츠</option>
-        <option value="b16">프라우드윙부츠</option>
-        <option value="b17">크로노스윙부츠</option>
-        <option value="b18">인페르노윙부츠</option>
-    </select>
-    <div id="te1"></div>
-    <br>
-    <div id="requiredExperience">필요 경험치: </div>
+    <div class="mains">
+        <div class="main">
+            <h1>📈 테일즈런너 레벨업 계산기 📈</h1>
+            <h3 style="color: #909090;">만든놈: 사큐</h3>
+            <div class="cul">
+                <div id="cul">현재 레벨</div>
+                <select name="색상" id="selA">
+                    <option value="a_red">빨간색</option>
+                    <option value="a_orange">주황색</option>
+                    <option value="a_yellow">노란색</option>
+                    <option value="a_green">초록색</option>
+                    <option value="a_blue">파란색</option>
+                    <option value="a_darkblue">남색</option>
+                    <option value="a_purple">보라색</option>
+                </select>
+                <select name="레벨" id="selALvl">
+                    <option value="a1">병아리</option>
+                    <option value="a2">발바닥</option>
+                    <option value="a3">양말</option>
+                    <option value="a4">슬리퍼</option>
+                    <option value="a5">운동화</option>
+                    <option value="a6">윙부츠</option>
+                    <option value="a7">데빌윙부츠</option>
+                    <option value="a8">엔젤윙부츠</option>
+                    <option value="a9">파워윙부츠</option>
+                    <option value="a10">썬더윙부츠</option>
+                    <option value="a11">루나윙부츠</option>
+                    <option value="a12">쏠라윙부츠</option>
+                    <option value="a13">스텔라윙부츠</option>
+                    <option value="a14">갤럭시윙부츠</option>
+                    <option value="a15">홀리윙부츠</option>
+                    <option value="a16">프라우드윙부츠</option>
+                    <option value="a17">크로노스윙부츠</option>
+                    <option value="a18">인페르노윙부츠</option>
+                </select>
+                <input type="number" placeholder="퍼센트" id="lvlPer" min="0" max="100" step="0.01" value="0">%
+            </div>
+            <div class="tal">
+                <div id="tal">목표 레벨</div>
+                <select name="색상" id="selB">
+                    <option value="b_red">빨간색</option>
+                    <option value="b_orange">주황색</option>
+                    <option value="b_yellow">노란색</option>
+                    <option value="b_green">초록색</option>
+                    <option value="b_blue">파란색</option>
+                    <option value="b_darkblue">남색</option>
+                    <option value="b_purple">보라색</option>
+                </select>
+                <select name="레벨" id="selBLvl">
+                    <option value="b1">병아리</option>
+                    <option value="b2">발바닥</option>
+                    <option value="b3">양말</option>
+                    <option value="b4">슬리퍼</option>
+                    <option value="b5">운동화</option>
+                    <option value="b6">윙부츠</option>
+                    <option value="b7">데빌윙부츠</option>
+                    <option value="b8">엔젤윙부츠</option>
+                    <option value="b9">파워윙부츠</option>
+                    <option value="b10">썬더윙부츠</option>
+                    <option value="b11">루나윙부츠</option>
+                    <option value="b12">쏠라윙부츠</option>
+                    <option value="b13">스텔라윙부츠</option>
+                    <option value="b14">갤럭시윙부츠</option>
+                    <option value="b15">홀리윙부츠</option>
+                    <option value="b16">프라우드윙부츠</option>
+                    <option value="b17">크로노스윙부츠</option>
+                    <option value="b18">인페르노윙부츠</option>
+                </select>
+            </div>
+            <br>
+            <div id="requiredExperience">필요 경험치: </div>
+        </div>
+    </div>
 
     <!--스크립트 구역-->
     <script>
@@ -175,7 +182,7 @@
                 return;
             }
 
-            neededExpSpan.textContent = `필요 경험치: ${Number(expNeeded.toFixed(2)).toLocaleString()}`;
+            neededExpSpan.textContent = `필요 경험치: ${Number(expNeeded.toFixed(2)).toLocaleString()} EXP`;
         }
 
         sel_A_Color.addEventListener('change', updateExpNeeded);
@@ -188,6 +195,64 @@
         updateExpNeeded();
 
     </script>
+    <style>
+        @font-face {
+            font-family: 'Dovemayo_gothic';
+            src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2302@1.1/Dovemayo_gothic.woff2') format('woff2');
+            font-weight: normal;
+            font-style: normal;
+        }
+
+        * {
+            font-family: 'Dovemayo_gothic';
+        }
+
+        h1 {
+            font-size: 35px;
+        }
+
+        html,
+        body {
+            margin: 0;
+            padding: 0;
+            background-image: url(img/backgroundimgs.png);
+            background-position: center;
+            background-repeat: repeat;
+            background-size: cover;
+        }
+
+        select,
+        input {
+            font-size: 15px;
+        }
+
+        .cul {
+            margin-bottom: 10px;
+        }
+
+        .tal {
+            margin-top: 10px;
+        }
+
+
+        .mains {
+            position: relative;
+            width: 100vw;
+            height: 100vh;
+        }
+
+        .main {
+            background-color: #fff;
+            display: inline-block;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: #303030 0px 0px 50px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    </style>
 </body>
 
 </html>
