--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             </div>
             <br>
             <div id="requiredExperience">필요 경험치: </div>
+            <div style="font-size: 12px;">모바일 환경에서는 보기가 다소 불편할 수 있어요!</div>
         </div>
     </div>
 
