--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
             const selALvlText = selALvl.options[selALvl.selectedIndex].text;
             const selBText = selB.options[selB.selectedIndex].text;
             const selBLvlText = selALvl.options[selBLvl.selectedIndex].text;
-            neededExpSpan.textContent = `${selAText} ${selALvlText}에서 ${selBText} ${selBLvlText} 까지는 ${Number(expNeeded.toFixed(2)).toLocaleString()} 경험치가 필요해요!`;
+            const selAPer = sel_A_Per.value;
+            neededExpSpan.textContent = `${selAText} ${selALvlText} ${selAPer}% 에서 ${selBText} ${selBLvlText} 까지는 ${Number(expNeeded.toFixed(2)).toLocaleString()} 경험치가 필요해요!`;
         }
 
         sel_A_Color.addEventListener('change', updateExpNeeded);
