--- a/index.html
+++ b/index.html
@@ -183,14 +183,10 @@
                 return;
             }
 
-            const selA = document.getElementById("selA");
-            const selALvl = document.getElementById("selALvl");
-            const selB = document.getElementById("selB");
-            const selBLvl = document.getElementById("selBLvl");
-            const selAText = selA.options[selA.selectedIndex].text;
-            const selALvlText = selALvl.options[selALvl.selectedIndex].text;
-            const selBText = selB.options[selB.selectedIndex].text;
-            const selBLvlText = selALvl.options[selBLvl.selectedIndex].text;
+            const selAText = sel_A_Color.options[sel_A_Color.selectedIndex].text;
+            const selALvlText = sel_A_Lvl.options[sel_A_Lvl.selectedIndex].text;
+            const selBText = sel_B_Color.options[sel_B_Color.selectedIndex].text;
+            const selBLvlText = sel_B_Lvl.options[sel_B_Lvl.selectedIndex].text;
             const selAPer = sel_A_Per.value;
 
             function koUnits(num) {
