--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
             const expNeeded = calculateExpNeeded(curPos, curPercent, tarPos);
             if (expNeeded === null) {
-                neededExpSpan.textContent = "계산에 문제가 발생했습니다.";
+                neededExpSpan.textContent = "0부터 100까지의 수를 입력해주세요!";
                 return;
             }
 
@@ -248,6 +248,8 @@
         select,
         input {
             font-size: 15px;
+            border-radius: 100px;
+            padding: 3px;
         }
 
         .cul {
