--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <div class="mains">
         <div class="main">
             <h1>테일즈런너 레벨업 계산기</h1>
-            <h3 style="color: #909090;">만든놈: 사큐</h3>
             <div class="cul">
                 <div id="cul">현재 레벨</div>
                 <select name="색상" id="selA">
@@ -79,8 +78,8 @@
                 </select>
             </div>
             <br>
-            <div id="requiredExperience">필요 경험치: </div>
-            <div style="font-size: 12px;">모바일 환경에서는 보기가 다소 불편할 수 있어요!</div>
+            <div id="requiredExperience"></div>
+            <div style="font-size: 12px;">(C) 2025. 사큐 All rights reserved.</div>
         </div>
     </div>
 
@@ -234,7 +233,7 @@
             h1 {
                 font-size: 25px;
             }
-            
+
             .main {
                 width: 80%;
             }
@@ -282,10 +281,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-image: url(img/backgroundimgs.png);
-            background-position: center;
-            background-repeat: repeat;
-            background-size: cover;
+            background-color: #dee2e6;
         }
 
         select,
@@ -296,11 +292,13 @@
         }
 
         .cul {
-            margin-bottom: 10px;
+            margin-top: 10px;
+            font-size: 17px;
         }
 
         .tal {
             margin-top: 10px;
+            font-size: 17px;
         }
 
         .hero {
@@ -357,7 +355,7 @@
             display: inline-block;
             padding: 30px;
             border-radius: 15px;
-            box-shadow: #303030 0px 0px 50px;
+            box-shadow: #ced4da 0px 0px 7px 1px;
             position: absolute;
             top: 50%;
             left: 50%;
