--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             </div>
             <br>
             <div id="requiredExperience"></div>
+            <div style="font-size: 10px;">Ver 1.1</div>
             <div style="font-size: 10px;">저작권 (C) 2025. [사큐] 모든 권리 보유.</div>
         </div>
     </div>
@@ -341,6 +342,12 @@
             background-color: #ced4da;
             border: none;
             cursor: pointer;
+            transition: .2s all;
+        }
+
+        button:hover {
+            background-color: #dee2e6;
+            transform: scale(105%);
         }
 
         div {
