--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <br>
             <div id="requiredExperience"></div>
             <div style="font-size: 10px;">Ver 1.12</div>
-            <div style="font-size: 10px;">저작권 (C) 2025. [사큐] 모든 권리 보유.</div>
+            <div style="font-size: 10px;">저작권 (C) 2025. [묘네] 모든 권리 보유.</div>
         </div>
     </div>
 
