--- a/index.html
+++ b/index.html
@@ -306,11 +306,11 @@
     </script>
     <style>
         @font-face {
-            font-family: 'Galmuri14';
-            src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2506-1@1.0/Galmuri14.woff2') format('woff2');
-            font-weight: normal;
-            font-style: normal;
-        }
+    font-family: 'ThinRounded';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/2511-1@1.0/ThinDungGeunMo.woff2') format('woff2');
+    font-weight: normal;
+    font-display: swap;
+}
 
         @media (max-width: 767px) {
             h1 {
@@ -353,7 +353,7 @@
         }
 
         * {
-            font-family: 'Galmuri14';
+            font-family: 'ThinRounded';
         }
 
         h1 {
