--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             <div id="exp">필요 경험치</div>
             <div id="requiredExperience"></div>
             <br>
-            <div style="font-size: 10px;">Ver 1.2</div>
-            <div style="font-size: 10px;">저작권 (C) 2025. [묘네] 모든 권리 보유.</div>
+            <div style="font-size: 10px;">Ver 1.2 Web</div>
+            <div style="font-size: 10px;">저작권 (C) 2025. [묘네] 모든 권리 보유.<br><a href="https://1drv.ms/u/c/af2ce4e9a4c1f501/IQCyZzxMsA0KQqiMG7yIINiRAfEowFA7vAgzvdm8s1z57h8?e=ERrRYH">윈도우에 설치</a></div>
         </div>
     </div>
 
