--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div id="requiredExperience"></div>
             <br>
             <div style="font-size: 10px;">Ver 1.2 Web</div>
-            <div style="font-size: 10px;">저작권 (C) 2025. [묘네] 모든 권리 보유.<br><a href="https://1drv.ms/u/c/af2ce4e9a4c1f501/IQCyZzxMsA0KQqiMG7yIINiRAfEowFA7vAgzvdm8s1z57h8?e=ERrRYH">윈도우에 설치</a></div>
+            <div style="font-size: 10px;">저작권 (C) 2025. [묘네] 모든 권리 보유.<br><a target="_blank" href="https://www.dropbox.com/scl/fi/bzkxtfdc83ap2u2ig2p2e/setup_tr_levelup_calcurator_1.2.exe?rlkey=buxeecppgm3snylj35na74ksj&st=8qz5ed1a&dl=1">윈도우에 설치</a></div>
         </div>
     </div>
 
